--- a/PatronsDiseny/contenido/template.html
+++ b/PatronsDiseny/contenido/template.html
@@ -70,10 +70,18 @@
 
     <h3>Explicación: </h3>
 
-	    <img src="../img/template-method-clase.jpg" alt="Clase 2 Template Method." class="imagen_template_method">
+	    <img src="../img/template-method-clase.PNG" alt="Clase 2 Template Method." class="imagen_template_method">
+	    <h3>Main</h3>
 	    <img src="../img/template-method-main.PNG" alt="Main Template Method." class="imagen_template_method">
-	
-	
+		<h4>ClaseAbstracta.java</h4>
+		<img src="../img/template-method-clase-abstracta.PNG" alt="Main Template Method." class="imagen_template_method">
+		<h4>ClaseConcreta1.java</h4>
+		<img src="../img/template-method-clase-conecreta1.PNG" alt="Main Template Method." class="imagen_template_method">
+		<h4>ClaseConcreta2.java</h4>
+		<img src="../img/template-method-clase-conecreta2.PNG" alt="Main Template Method." class="imagen_template_method">
+		<h4>Resultado</h4>
+		<img src="../img/template-method-resultado.PNG" alt="Main Template Method." class="imagen_template_method">
+		
 	 <ul>
          <li>En ClaseAbstracta se define el método plantilla obtener(), desde el que se llama a dos métodos definidos como abstractos (que serán implementados por las subclases).</li>
          <li>En ClaseConcreta1 se implementan dichos métodos de forma que uno de ellos devuelve el número entero recibido como parámetro multiplicado por 100, y otro agregándole 10.</li>
